<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Zadatak3Activity">



    <TextView
        android:id="@+id/lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lati" />
    <TextView
        android:id="@+id/lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longi" />
    <TextView
        android:id="@+id/udalj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/udaljenost" />
</LinearLayout>