<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bZ01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="prviZadatak"
        android:text="@string/z1_naziv" />

    <Button
        android:id="@+id/bZ02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="drugiZadatak"
        android:text="@string/z2_naziv" />

    <Button
        android:id="@+id/bZ03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="treciZadatak"
        android:text="@string/z3_naziv" />
</LinearLayout>