<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Zadatak2Activity">

    <TextView
        android:id="@+id/lab1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labela1" />

    <EditText
        android:id="@+id/tId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lab2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab_ciljna" />

    <EditText
        android:id="@+id/tIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/gumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="izracunaj"
        android:text="@string/gumb_izracun" />

    <TextView
        android:id="@+id/lUdaljenost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>